--- a/.github/workflows/check-conflicts-on-quest-branches.yml
+++ b/.github/workflows/check-conflicts-on-quest-branches.yml
@@ -28,4 +28,4 @@ jobs:
       - run: git checkout ${{ github.head_ref }}
       - run: git checkout ${{ github.base_ref }}
       - run: git merge ${{ github.head_ref }} # merge PR locally to validate conflicts
-      #- run: API_SERVER_TOKEN=${{ secrets.API_SERVER_TOKEN }} node scripts/update_child_branches.js --repoPath=. --branch=${{ github.base_ref }}
+      - run: API_SERVER_TOKEN=${{ secrets.API_SERVER_TOKEN }} node scripts/update_child_branches.js --repoPath=. --branch=${{ github.base_ref }}
