--- a/.github/workflows/check-conflicts-on-quest-branches.yml
+++ b/.github/workflows/check-conflicts-on-quest-branches.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Check quest solution branches
         uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: '14'
       - run: yarn install
       - run: git checkout ${{ github.head_ref }}
       - run: git checkout ${{ github.base_ref }}
